--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1,5 +1,6 @@
 ApplicationName=Yet Another Personal Bank Account Manager
 
+MainFrame.ReadError=Yapbam ne peut pas lire ce fichier.
 MainFrame.CheckedBalance=Solde point\u00E9 : {0}
 MainFrame.CurrentBalance=Solde courant : {0}
 MainFrame.FinalBalance=Solde final : {0}
@@ -140,7 +141,7 @@ MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Affiche les informations sur ce programme
 
 MainMenu.CheckUpdate=Rechercher des mises \u00E0 jour
-MainMenu.MainMenu.CheckUpdate.ToolTip=Recherche des mises \u00E0 jour sur Internet
+MainMenu.CheckUpdate.ToolTip=Recherche des mises \u00E0 jour sur Internet
 MainMenu.CheckUpdate.Error.title=Impossible de rechercher les mises \u00E0 jour
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>HttpError {0,number}</B><BR><BR>Ce serveur est probablement momentan\u00E9ment hors service.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.IOError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>{0}</B><BR><BR>V\u00E9rifiez votre connexion Internet ou les param\u00E8tres de connexion \u00E0 Internet de Yapbam.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
@@ -151,6 +152,15 @@ MainMenu.CheckUpdate.NoUpdate.title=Pas de mise \u00E0 jour disponible
 MainMenu.CheckUpdate.NoUpdate=Yapbam est \u00E0 jour
 MainMenu.CheckUpdate.FirstRun.title=V\u00E9rifier si une version plus r\u00E9cente est disponible
 MainMenu.CheckUpdate.FirstRun.message=<HTML>Bienvenue dans Yapbam \!<BR><BR>Yapbam peut se connecter a Internet pour v\u00E9rifier si une nouvelle version est disponible.<BR>Voulez-vous que Yapbam effectue cette v\u00E9rification \u00E0 chaque d\u00E9marrage ?<BR><BR>Ce r\u00E9glage pourra \u00EAtre modifi\u00E9 dans les pr\u00E9f\u00E9rences (menu Fichier)</html>
+#Dialog displayed during online check for updates
+MainMenu.CheckUpdate.Dialog.title=Recherche des mises à jour
+MainMenu.CheckUpdate.Dialog.message=Recherche des mises à jour en cours. Merci de patienter ...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Abandonne la recherche des mises à jour
+
+MainMenu.web.support=Support ...
+MainMenu.web.support.tooltip=Ouvre la page Web de support de Yapbam (requiert une connexion Internet) pour signaler un bug, une erreur de traduction, obtenir de l'aide, etc ... 
+MainMenu.web.yapbam=Visiter le site web de Yapbam
+MainMenu.web.yapbam.tooltip=Ouvre le site web de Yapbam (requiert une connexion Internet)
 
 BalanceHistory.title=Historique du solde
 BalanceHistory.toolTip=Graphique de l'\u00E9volution du solde au jour le jour
@@ -159,6 +169,11 @@ BalanceHistory.chart.toolTip=D\u00E9placez la barre verticale pour afficher le s
 BalanceHistory.showGrid=Afficher la grille
 BalanceHistory.showGrid.toolTip=Cochez cette case pour afficher la grille
 BalanceHistory.report.toolTip=Cliquez sur le graphique pour changer le jour 
+BalanceHistory.toDay.toolTip=Cliquez ce bouton pour positionner la date à aujourd'hui
+BalanceHistory.alertTooltipAdd=Première alerte le {0}
+BalanceHistory.alerts=Alertes :
+BalanceHistory.alerts.format={0}: {1,date,short} ({2})
+BalanceHistory.alerts.toolTip=Sélectionnez une alerte dans ce menu pour visualiser l'historique du solde du compte qu'elle concerne (Ceci changera le filtre)
 
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - Tous droits r\u00E9serv\u00E9s<br>Version : <b>{1}</b></html>
 AboutDialog.License.TabName=License
@@ -227,6 +242,7 @@ GeneratePeriodicalTransactionsDialog.lastDate=G\u00E9n\u00E9rer les op\u00E9rati
 GeneratePeriodicalTransactionsDialog.lastDate.toolTip=Entrez ici la date jusqu'\u00E0 laquelle g\u00E9n\u00E9rer les op\u00E9rations
 GeneratePeriodicalTransactionsDialog.summary={0} op\u00E9rations. Recettes : {1}, d\u00E9penses : {2}, total : {3}
 GeneratePeriodicalTransactionsDialog.ignored=Ignor\u00E9e
+GeneratePeriodicalTransactionsDialog.alert=Des opérations périodiques sont en attente et devraient probablement être générées
 
 GenericButton.cancel=Annuler
 GenericButton.cancel.toolTip=Annule la saisie en cours
@@ -240,6 +256,7 @@ GenericButton.delete=Supprimer
 GenericButton.duplicate=Dupliquer
 GenericButton.yes=Oui
 GenericButton.no=Non
+GenericButton.ignore=Ignorer
 
 Transaction.0=S/O
 Transaction.account=Compte
@@ -291,6 +308,8 @@ TransactionDialog.SubPanel.new=Nouvelle sous-op\u00E9ration
 TransactionDialog.SubPanel.new.tooltip=Cr\u00E9e une nouvelle sous-op\u00E9ration
 TransactionDialog.SubPanel.title=Sous-op\u00E9rations
 TransactionDialog.SubPanel.total=Total des sous-op\u00E9rations : {0,number,currency}
+TransactionDialog.checkbook.new.tooltip=Cliquez ici pour créer un nouveau chéquier
+
 SubTransactionDialog.amount.tooltip=Entrez ici le montant de la sous-op\u00E9ration
 SubTransactionDialog.empty.amount=Ce bouton est d\u00E9sactiv\u00E9 car le montant est vide
 SubTransactionDialog.empty.desciption=Ce bouton est d\u00E9sactiv\u00E9 car le libell\u00E9 de la sous-op\u00E9ration est vide
@@ -404,6 +423,14 @@ AccountManager.transactionsNumber.toolTip=Cette cellule contient le nombre d'op\
 AccountManager.error.message.alreadyUsed=Impossible de renommer ce compte, le compte "{0}" existe d\u00E9j\u00E0 
 AccountManager.error.message.empty=Un compte ne peut avoir un nom vide
 AccountManager.error.title=Nom de compte incorrect
+AccountManager.modesNumber.title=Nombre de modes de paiement
+AccountManager.modesNumber.toolTip=Cette colonne contient le nombre de modes de paiement de chaque compte
+AccountManager.checkbooksNumber.title=Nombre de chéquiers
+AccountManager.checkbooksNumber.toolTip=Cette colonne contient le nombre de chéquiers de chaque compte
+AccountManager.alertThresholdLess.title=Alerte si le solde est inférieur à
+AccountManager.alertThresholdMore.title=Alerte si le solde est supérieur à
+AccountManager.alertThresholdLess.toolTip=Double cliquez sur cette cellule pour éditer le seuil de solde en deça duquel une alerte est déclenchée (laisser vide pour ne pas fixer de limite)
+AccountManager.alertThresholdMore.toolTip=Double cliquez sur cette cellule pour éditer le seuil de solde au delà duquel une alerte est déclenchée (laisser vide pour ne pas fixer de limite)
 
 CategoryManager.new.toolTip=Cr\u00E9e une nouvelle cat\u00E9gorie
 CategoryManager.title=Gestion des cat\u00E9gories
@@ -580,33 +607,6 @@ ImportDialog.noDateSelected=Ce bouton est d\u00E9sactiv\u00E9 car vous n'avez pa
 ImportDialog.errorMessage.title=Erreurs lors de l'import
 ImportDialog.errorMessagelienNumberColumnHeader=n\u00B0 de ligne
 
-# Added since v0.6.0
-#Added menu items
-MainMenu.web.support=Support ...
-MainMenu.web.support.tooltip=Ouvre la page Web de support de Yapbam (requiert une connexion Internet) pour signaler un bug, une erreur de traduction, obtenir de l'aide, etc ... 
-MainMenu.web.yapbam=Visiter le site web de Yapbam
-MainMenu.web.yapbam.tooltip=Ouvre le site web de Yapbam (requiert une connexion Internet)
-
-#Dialog displayed during online check for updates
-MainMenu.CheckUpdate.Dialog.title=Recherche des mises à jour
-MainMenu.CheckUpdate.Dialog.message=Recherche des mises à jour en cours. Merci de patienter ...
-MainMenu.CheckUpdate.Dialog.cancel.tooltip=Abandonne la recherche des mises à jour
-
-#A new generic button
-GenericButton.ignore=Ignorer
-
-#Alert message when the balance history has negative value in the future
-BalanceHistory.alertTooltipAdd=Première alerte le {0}
-
-#Tooltip of transaction edition dialog that allows user to create a new checkbook
-TransactionDialog.checkbook.new.tooltip=Cliquez ici pour créer un nouveau chéquier
-
-#Account administration panel / account's table (payment modes and checkbooks informations)
-AccountManager.modesNumber.title=Nombre de modes de paiement
-AccountManager.modesNumber.toolTip=Cette colonne contient le nombre de modes de paiement de chaque compte
-AccountManager.checkbooksNumber.title=Nombre de chéquiers
-AccountManager.checkbooksNumber.toolTip=Cette colonne contient le nombre de chéquiers de chaque compte
-
 #Account administration panel / checkbook's table
 checkbookDialog.border.title=Chéquiers
 checkbookDialog.Delete.tooltip=Ce bouton supprime le chéquier sélectionné
@@ -614,7 +614,6 @@ checkbookDialog.book.short=Chéquier
 checkbookDialog.remaining.short=Nombre de chèques restant
 checkbookDialog.next.short=Prochain chèque
 checkbookDialog.New.tooltip=Ce bouton permet de créer un nouveau chéquier
-
 #Checkbook edition dialog
 checkbookDialog.title.new=Nouveau chéquier
 checkbookDialog.title.edit=Edition de chéquier
@@ -631,7 +630,6 @@ checkbookDialog.error.numberIsBlank=Ce bouton est désactivé car le nombre de chè
 checkbookDialog.error.numberOutOfRange=Ce bouton est désactivé car le nombre de chèque que vous avez saisi est trop grand
 checkbookDialog.error.nextIsBlank=Ce bouton est désactivé car le numéro du prochain chèque utilisable n'est pas renseigné
 checkbookDialog.error.nextOutsideOfCheckbook=Ce bouton est désactivé car le numéro du prochain chèque utilisable n'est pas compris dans le chéquier
-
 #Dialog displayed when the last check in a checkbook is used
 checkbookDialog.finished.title=Chéquier terminé
 checkbookDialog.finished.message=Le chéquier ({0}->{1}) est terminé, que souhaitez vous faire ?
@@ -639,24 +637,6 @@ checkbookDialog.finished.createNew=En créer un nouveau
 checkbookDialog.finished.delete=Supprimer ce chéquier
 checkbookDialog.finished.DeleteAndCreateNew=Le supprimer et en créer un nouveau
 
-#Displayed when some periodical transactions not yet generated are detected (not yet implemented)
-GeneratePeriodicalTransactionsDialog.alert=Des opérations périodiques sont en attente et devraient probablement être générées
-
-# Added since v0.6.1
-MainFrame.ReadError=Yapbam ne peut pas lire ce fichier.
-
-#Added since 0.6.3
-#Alert administration panel
-AccountManager.alertThresholdLess.title=Alerte si le solde est inférieur à
-AccountManager.alertThresholdMore.title=Alerte si le solde est supérieur à
-AccountManager.alertThresholdLess.toolTip=Double cliquez sur cette cellule pour éditer le seuil de solde en deça duquel une alerte est déclenchée (laisser vide pour ne pas fixer de limite)
-AccountManager.alertThresholdMore.toolTip=Double cliquez sur cette cellule pour éditer le seuil de solde au delà duquel une alerte est déclenchée (laisser vide pour ne pas fixer de limite)
-
-#BalanceHistory Panel
-BalanceHistory.toDay.toolTip=Cliquez ce bouton pour positionner la date à aujourd'hui
-BalanceHistory.alerts=Alertes :
-BalanceHistory.alerts.format={0}: {1,date,short} ({2})
-BalanceHistory.alerts.toolTip=Sélectionnez une alerte dans ce menu pour visualiser l'historique du solde du compte qu'elle concerne (Ceci changera le filtre)
 
 #---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.4
