--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1,5 +1,6 @@
 ApplicationName=Yet Another Personal Bank Account Manager
 
+MainFrame.ReadError=Yapbam não pode ler este arquivo
 MainFrame.CheckedBalance=Balan\u00e7o verificado: {0}
 MainFrame.CurrentBalance=Balan\u00e7o atual: {0}
 MainFrame.FinalBalance=Balan\u00e7o final: {0}
@@ -141,7 +142,7 @@ MainMenu.About.Mnemonic=S
 MainMenu.About.ToolTip=Mostra informa\u00E7\u00F5es sobre este aplicativo (autor, vers\u00E3o...)
 
 MainMenu.CheckUpdate=Verificar atualiza\u00E7\u00F5es
-MainMenu.MainMenu.CheckUpdate.ToolTip=Verificar atualiza\u00E7\u00F5es atrav\u00E9s da Internet
+MainMenu.CheckUpdate.ToolTip=Verificar atualiza\u00E7\u00F5es atrav\u00E9s da Internet
 MainMenu.CheckUpdate.Error.title=Imposs\u00EDvel de Verificar atualiza\u00E7\u00F5es
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Problemas na comunica\u00e7\u00E3o com o server atualizado : <B>HttpError {0,number}</B><BR><BR>Este server provavelmente  est\u00E1 temporariamente fora de servi\u00E7o.<BR><BR>Por favor tente novamente mais tarde. Se o problema persistir, v\u00E1 para <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.IOError=<HTML><BODY>Problemas na comunica\u00e7\u00E3o com o server atualizado : <B>{0}</B><BR><BR>Por favor verifique a conex\u00E3o com a Internet ou a configura\u00e7\u00E3o do Yapbam.<BR><BR>Se o problema persistir, v\u00E1 para <a href="{1}">{1}</a></BODY></HTML>
@@ -152,6 +153,16 @@ MainMenu.CheckUpdate.NoUpdate.title=Atualiza\u00e7\u00E3o est\u00E1 dispon\u00ED
 MainMenu.CheckUpdate.NoUpdate=Yapbam est\u00E1 atualizado
 MainMenu.CheckUpdate.FirstRun.title=Verificar se atualiza\u00E7\u00F5es est\u00E3o dispon\u00EDveis
 MainMenu.CheckUpdate.FirstRun.message=<HTML>Bem vindo ao Yapbam \!<BR><BR>Yapbam pode ser conectado a Internet para verificar-se uma nova vers\u00E3o est\u00E1 dispon\u00EDvel.<BR>Voc\u00EA gostaria que o Yapbam fizesse sempre esta verifica\u00e7\u00E3o no in\u00EDcio?<BR><BR>Esta modifica\u00e7\u00E3o pode ser efetuada na configura\u00e7\u00E3o de Prefer\u00EAncias (no menu Arquivo)</html>
+#Dialog displayed during online check for updates
+MainMenu.CheckUpdate.Dialog.title=Checando atualizações
+MainMenu.CheckUpdate.Dialog.message=Procurando for atualizações. Por favor espere ...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancela a procura por atualizações 
+
+MainMenu.web.support=Obtenha suporte
+MainMenu.web.support.tooltip=Abri Yapbam site de suporte (necessita de conexão com a Internet) para reportar um bug, tradução errada, obtenha suporte, ... 
+MainMenu.web.yapbam=Visit Yapbam site
+MainMenu.web.yapbam.tooltip=Abri Yapbam site (necessita de conexão com a Internet)
+
 BalanceHistory.title=Hist\u00F3ria do Balan\u00E7o
 BalanceHistory.toolTip=Gr\u00E1fico do balan\u00E7o do dia
 BalanceHistory.balance=Balan\u00E7o do {0} : {1}
@@ -159,6 +170,12 @@ BalanceHistory.chart.toolTip=Move a barra vertical para mostrar abaixo o balan\u
 BalanceHistory.showGrid=Inserir a grade 
 BalanceHistory.showGrid.toolTip=Selecione esta caixa para mostra a grade
 BalanceHistory.report.toolTip=Clique no gr\u00E1fico para modificar o dia 
+BalanceHistory.toDay.toolTip=Clique para colocar a data de hoje
+BalanceHistory.alerts=Alertas:
+BalanceHistory.alertTooltipAdd=Primeiro alerta no {0}
+#next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
+BalanceHistory.alerts.format={0}: {1,date,short} ({2})
+BalanceHistory.alerts.toolTip=Selecione um alerta neste menu para ver o histórico do balanço da conta correspondente (muda o filtro atual)
 
 AboutDialog.Content=<html>Direitos de cópia &copy; 2009 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00E3o: <b>{1}</b></html>
 AboutDialog.License.TabName=Licen\u00E7a
@@ -227,6 +244,7 @@ GeneratePeriodicalTransactionsDialog.lastDate=Gerar transa\u00E7\u00F5es at\e00E
 GeneratePeriodicalTransactionsDialog.lastDate.toolTip=Digite a data na qual transa\u00E7\u00F5es peri\u00F3dicas devem ser geradas
 GeneratePeriodicalTransactionsDialog.summary=Transa\u00E7\u00F5es : {0}, Recibos : {1}, Despesas : {2}, Total : {3}
 GeneratePeriodicalTransactionsDialog.ignored=Ignoradas
+GeneratePeriodicalTransactionsDialog.alert=Algumas transações periódicas estão pendentes e provavelmente serão geradas.
 
 GenericButton.cancel=Cancelar
 GenericButton.cancel.toolTip=Cancela a atual entrada
@@ -240,6 +258,7 @@ GenericButton.delete=Deletar
 GenericButton.duplicate=Duplicar
 GenericButton.yes=Sim
 GenericButton.no=n\u00E3o
+GenericButton.ignore=Ignore
 
 Transaction.0=S/T
 Transaction.account=Conta
@@ -291,6 +310,8 @@ TransactionDialog.SubPanel.new=Nova sub-transa\u00e7\u00E3o
 TransactionDialog.SubPanel.new.tooltip=Cria uma nova sub-transa\u00e7\u00E3o
 TransactionDialog.SubPanel.title=sub-transa\u00e7\u00E3o
 TransactionDialog.SubPanel.total=Total de sub-transa\u00E7\u00F5es : {0,number,currency}
+TransactionDialog.checkbook.new.tooltip=Clique aqui para criar um novo livro-cheque
+
 SubTransactionDialog.amount.tooltip=Digite o valor da sub-transa\u00e7\u00E3o
 SubTransactionDialog.empty.amount=Este modo n\u00E3o est\u00E1 dispon\u00EDvel porque o valor est\u00E1 em branco
 SubTransactionDialog.empty.desciption=Este modo n\u00E3o est\u00E1 dispon\u00EDvel porque a descri\u00e7\u00E3o da sub-transa\u00e7\u00E3o est\u00E1 em branco
@@ -404,6 +425,14 @@ AccountManager.transactionsNumber.toolTip=Cont\u00E9m o n\u00FAmero de transa\u0
 AccountManager.error.message.alreadyUsed=Conta n\u00E3o pode ser renomeada; a conta "{0}" j\u00E1 existe
 AccountManager.error.message.empty=O nome da conta n\u00E3o poder ficar em branco
 AccountManager.error.title=Nome da conta est\u00E1 incorreto
+AccountManager.modesNumber.titleNúmero de modos de pagamento
+AccountManager.modesNumber.toolTip=Esta coluna contém o número de modos de pagamento anexado nesta conta
+AccountManager.checkbooksNumber.title=Número de livro-cheque
+AccountManager.checkbooksNumber.toolTip=Esta coluna contém o número de livro-cheque anexado nesta conta
+AccountManager.alertThresholdLess.title=Alerte se o balanço for menos que 
+AccountManager.alertThresholdMore.title=Alerte se o balanço for mais que
+AccountManager.alertThresholdLess.toolTip=Double-Clique nesta célula para modificar o  baixo threshold para acionar um alerta (deixe em branco para colocar sem limite)
+AccountManager.alertThresholdMore.toolTip=Double-Clique nesta célula para modificar o alto threshold para acionar um alerta (deixe em branco para colocar sem limite)s
 
 CategoryManager.new.toolTip=Cria uma nova categoria
 CategoryManager.title=Gerenciador de categorias
@@ -580,34 +609,6 @@ ImportDialog.noDateSelected=A data do campo não está associado com nenhuma colun
 ImportDialog.errorMessage.title=Erro durante importação
 ImportDialog.errorMessagelienNumberColumnHeader=Número da linha
 
-
-
--- Added since v0.6.0
-#Added menu items
-MainMenu.web.support=Obtenha suporte
-MainMenu.web.support.tooltip=Abri Yapbam site de suporte (necessita de conexão com a Internet) para reportar um bug, tradução errada, obtenha suporte, ... 
-MainMenu.web.yapbam=Visit Yapbam site
-MainMenu.web.yapbam.tooltip=Abri Yapbam site (necessita de conexão com a Internet)
-
-#Dialog displayed during online check for updates
-MainMenu.CheckUpdate.Dialog.title=Checando atualizações
-MainMenu.CheckUpdate.Dialog.message=Procurando for atualizações. Por favor espere ...
-MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancela a procura por atualizações 
-
-#A new generic button
-GenericButton.ignore=Ignore
-
-#Alert message when the balance history has negative value in the future
-BalanceHistory.alertTooltipAdd=Primeiro alerta no {0}
-
-#Tooltip of transaction edition dialog that allows user to create a new checkbook
-TransactionDialog.checkbook.new.tooltip=Clique aqui para criar um novo livro-cheque
-#Account administration panel / account's table (payment modes and checkbooks informations)
-AccountManager.modesNumber.titleNúmero de modos de pagamento
-AccountManager.modesNumber.toolTip=Esta coluna contém o número de modos de pagamento anexado nesta conta
-AccountManager.checkbooksNumber.title=Número de livro-cheque
-AccountManager.checkbooksNumber.toolTip=Esta coluna contém o número de livro-cheque anexado nesta conta
-
 #Account administration panel / checkbook's table
 checkbookDialog.border.title=Livro-cheque
 checkbookDialog.Delete.tooltip=Deleta os livro-cheques selecionados
@@ -615,7 +616,6 @@ checkbookDialog.book.short=Livro-cheque
 checkbookDialog.remaining.short=Número de cheques restantes
 checkbookDialog.next.short=Próximo cheque
 checkbookDialog.New.tooltip=Cria um novo livro-cheque
-
 #Checkbook edition dialog
 checkbookDialog.title.new=Novo livro-cheque
 checkbookDialog.title.edit=Editar livro-cheque
@@ -632,34 +632,12 @@ checkbookDialog.error.numberIsBlank=Disabilite porque o número de cheques no liv
 checkbookDialog.error.numberOutOfRange=Disabilite porque o número de cheques que você entrou é muito grande
 checkbookDialog.error.nextIsBlank=Disabilite porque o próximo cheque está em branco
 checkbookDialog.error.nextOutsideOfCheckbook=Disabilite porque o próximo número de cheque não está contido neste livro-cheque
-
 #Dialog displayed when the last check in a checkbook is used
 checkbookDialog.finished.title=Livro-cheque terminado
 checkbookDialog.finished.message=O livro-cheque ({0}->{1}) está terminado, o que você quer fazer ?
 checkbookDialog.finished.createNew=Cria um novo
 checkbookDialog.finished.delete=Deleta o livro-cheque
 checkbookDialog.finished.DeleteAndCreateNew=Deleta o mesmo e cria um novo
-
-#Displayed when some periodical transactions not yet generated are detected
-GeneratePeriodicalTransactionsDialog.alert=Algumas transações periódicas estão pendentes e provavelmente serão geradas.
-
-# Added since v0.6.1
-Yapbam não pode ler este arquivo
-
-#---------------------------------------------------------------------------------------------------------------------------------
-#Added since 0.6.3
-#Alert administration panel
-AccountManager.alertThresholdLess.title=Alerte se o balanço for menos que 
-AccountManager.alertThresholdMore.title=Alerte se o balanço for mais que
-AccountManager.alertThresholdLess.toolTip=Double-Clique nesta célula para modificar o  baixo threshold para acionar um alerta (deixe em branco para colocar sem limite)
-AccountManager.alertThresholdMore.toolTip=Double-Clique nesta célula para modificar o alto threshold para acionar um alerta (deixe em branco para colocar sem limite)s
-
-#BalanceHistory Panel
-BalanceHistory.toDay.toolTip=Clique para colocar a data de hoje
-BalanceHistory.alerts=Alertas:
-#next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
-BalanceHistory.alerts.format={0}: {1,date,short} ({2})
-BalanceHistory.alerts.toolTip=Selecione um alerta neste menu para ver o histórico do balanço da conta correspondente (muda o filtro atual)
 
 #---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.4
