--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -645,6 +645,6 @@ saveDialog.FileExist.title=Alerte
 
 ImportDialog.errorMessagemessage=<html>Des erreurs sont survenues lors de l'import du fichier.<br>Les lignes suivantes n'ont pu être décodées et seront ignorées.</html>
 ImportDialog.errorMessage.cancel.tooltip=Annule l'import
-ImportDialog.errorMessage.continue=Continuer
+GenericButton.continue=Continuer
 ImportDialog.errorMessage.continue.tooltip=Continue l'import, les lignes comportant des erreurs seront ignorés
 
