--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -646,6 +646,6 @@ saveDialog.FileExist.title=Alerta
 
 ImportDialog.errorMessagemessage=<html>Erros ocorreram durante importação do arquivo.<br>Não foi possível a separação das linhas seguintes and estas linhas serão ignoradas.</html>
 ImportDialog.errorMessage.cancel.tooltip=Cancela importação do arquivo 
-ImportDialog.errorMessage.continue=Continuar
+GenericButton.continue=Continuar
 ImportDialog.errorMessage.continue.tooltip=Continua a importação, as linhas erradas serão ignoradas
 
