--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -641,11 +641,30 @@ checkbookDialog.finished.DeleteAndCreateNew=Deleta o mesmo e cria um novo
 
 #---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.4
-saveDialog.FileExist.message=O arquivo já existe. Deseja substituí-lo?
-saveDialog.FileExist.title=Alerta
 
-ImportDialog.errorMessagemessage=<html>Erros ocorreram durante importação do arquivo.<br>Não foi possível a separação das linhas seguintes and estas linhas serão ignoradas.</html>
-ImportDialog.errorMessage.cancel.tooltip=Cancela importação do arquivo 
-GenericButton.continue=Continuar
-ImportDialog.errorMessage.continue.tooltip=Continua a importação, as linhas erradas serão ignoradas
+# This dialog is opened when the file to save the data is already existing
+# Dialog title
+saveDialog.FileExist.title=Warning
+# Dialog message
+saveDialog.FileExist.message=File already exists. Would you like to overwrite it?
 
+# When an imported file contains erroneous lines, a report is displayed
+ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines could not be parsed and will be ignored.</html>
+GenericButton.continue=Continue
+ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors.
+ImportDialog.errorMessage.cancel.tooltip=Abandons the import
+
+# Menu item to set a password to protect the data
+MainMenu.Protect=Password protection...
+MainMenu.Protect.Mnemonic=t
+MainMenu.Protect.ToolTip=Adds, modifies or deletes the password protection of the file
+
+# Dialogs dealing with setting or getting the file password
+FilePasswordDialog.title=File password protection
+FilePasswordDialog.setPassword.question=Enter a password to restrict access to the file
+FilePasswordDialog.setPassword.tooltip=Enter a password here or leave it blank to grant free access to the file
+# A warning message to warn about the fact that forgetting the password leads to permanent data loss.
+FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you lose this password, you cannot recover your data, even with the help of the Yapbam team.</html>
+FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it:</html>
+FilePasswordDialog.openFile.badPassword.question=<html>The password you entered is wrong.<br>Enter the password below:</html>
+FilePasswordDialog.openFile.tooltip=Enter the password here.
