--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -644,27 +644,27 @@ checkbookDialog.finished.DeleteAndCreateNew=Deleta o mesmo e cria um novo
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog title
-saveDialog.FileExist.title=Warning
+saveDialog.FileExist.title=Advertência
 # Dialog message
-saveDialog.FileExist.message=File already exists. Would you like to overwrite it?
+saveDialog.FileExist.message=Arquivo já existe. Você gostaria de escrever sobre o mesmo?
 
 # When an imported file contains erroneous lines, a report is displayed
-ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines could not be parsed and will be ignored.</html>
+ImportDialog.errorMessagemessage=<html>Erro ocorreu durante a importação do arquivo.<br>Não foi foi possível separar as linhas seguintes, e as mesmas serão ignoradas.</html>
 GenericButton.continue=Continue
-ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors.
-ImportDialog.errorMessage.cancel.tooltip=Abandons the import
+ImportDialog.errorMessage.continue.tooltip=A importação irá ignorar as linhas que contém erros.
+ImportDialog.errorMessage.cancel.tooltip=Abandonar a importação
 
 # Menu item to set a password to protect the data
-MainMenu.Protect=Password protection...
+MainMenu.Protect=Proteção da senha...
 MainMenu.Protect.Mnemonic=t
-MainMenu.Protect.ToolTip=Adds, modifies or deletes the password protection of the file
+MainMenu.Protect.ToolTip=Adiciona, modifica ou deleta a Proteção da senha do arquivo 
 
 # Dialogs dealing with setting or getting the file password
-FilePasswordDialog.title=File password protection
-FilePasswordDialog.setPassword.question=Enter a password to restrict access to the file
-FilePasswordDialog.setPassword.tooltip=Enter a password here or leave it blank to grant free access to the file
+FilePasswordDialog.title=Proteção da senha do arquivo
+FilePasswordDialog.setPassword.question=Digite uma senha para restrito acesso ao arquivo
+FilePasswordDialog.setPassword.tooltip=Digite a senha aqui our deixe em branco para deixar livre acesso ao arquivo
 # A warning message to warn about the fact that forgetting the password leads to permanent data loss.
-FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you lose this password, you cannot recover your data, even with the help of the Yapbam team.</html>
+FilePasswordDialog.setPassword.warning=<html><b>ADVERTÊNCIA:</b><br>If se você perder sua senha, você não poderá recuperar seus dados, mesmo com a ajuda do Yapbam team.</html>
 FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it:</html>
-FilePasswordDialog.openFile.badPassword.question=<html>The password you entered is wrong.<br>Enter the password below:</html>
-FilePasswordDialog.openFile.tooltip=Enter the password here.
+FilePasswordDialog.openFile.badPassword.question=<html>A senha que você digitou está errada.<br>Digite a senha abaixo:</html>
+FilePasswordDialog.openFile.tooltip=Digite a senha aqui.
