--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -668,3 +668,8 @@ FilePasswordDialog.setPassword.warning=<html><b>ADVERTÊNCIA:</b><br>If se você p
 FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it:</html>
 FilePasswordDialog.openFile.badPassword.question=<html>A senha que você digitou está errada.<br>Digite a senha abaixo:</html>
 FilePasswordDialog.openFile.tooltip=Digite a senha aqui.
+
+#---------------------------------------------------------------------------------------------------------------------------------
+FilePasswordDialog.confirm=Confirmação da senha
+FilePasswordDialog.confirm.tooltip=Redigite sua senha aqui
+FilePasswordDialog.confirmIsNotOk=A senha ea confirmação são diferentes
