--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -655,11 +655,16 @@ MainMenu.Protect.ToolTip=Ajoute, modifie ou supprime la protection du fichier pa
 
 # Dialogs dealing with setting or getting the file password
 FilePasswordDialog.title=Protection par mot de passe
-FilePasswordDialog.setPassword.question=Tapez ci-dessous le mot de passe permettant de prot\u00E9ger l'acc\u00E8s au fichier
-FilePasswordDialog.setPassword.tooltip=Entrez le mot de passe ici ou laissez ce champ vide pour donner l'acc\u00E8s libre au fichier.
+FilePasswordDialog.setPassword.question=Tapez ci-dessous le mot de passe permettant de protéger l'accès au fichier
+FilePasswordDialog.setPassword.tooltip=Entrez le mot de passe ici ou laissez ce champ vide pour donner l'accès libre au fichier
 # A warning message to warn about the fact that forgot the password leads the data loosing ... for ever.
 FilePasswordDialog.setPassword.warning=<html><b>ATTENTION :</b><br>Si vous perdez ce mot de passe il sera impossible de récupérer vos données,<br> même avec l'aide du support de Yapbam.</html>
 FilePasswordDialog.openFile.question=<html>L'accès à ce fichier est protégé par mot de passe.<br>Tapez le mot de passe ci-dessous :</html>
 FilePasswordDialog.openFile.badPassword.question=<html>Le mot de passe que vous venez d'entrer est incorrect.<br>Tapez le mot de passe ci-dessous :</html>
-FilePasswordDialog.openFile.tooltip=Entrez le mot de passe ici.
+FilePasswordDialog.openFile.tooltip=Entrez le mot de passe ici
+FilePasswordDialog.confirm=Confirmation
 
+#---------------------------------------------------------------------------------------------------------------------------------
+FilePasswordDialog.confirm=Confirmation du mot de passe
+FilePasswordDialog.confirm.tooltip=Retapez le mot de passe ici
+FilePasswordDialog.confirmIsNotOk=Le mot de passe et sa confirmation sont différents
