--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -674,7 +674,7 @@ StatementView.tooltip=Vue relevés de comptes
 StatementView.accountMenu.tooltip=Choisissez le compte dont vous souhaitez visualiser les relevés.
 StatementView.statementMenu.statementMenu.tooltip=Choisissez le relevé que vous souhaitez afficher.
 StatementView.notChecked=Non pointé
-StatementView.startBalance=Solde en début de période : {0}
-StatementView.endBalance=Solde en fin de période : {0}
+StatementView.startBalance=<html>Solde en début de période : <b>{0}</b></html>
+StatementView.endBalance=<html>Solde en fin de période : <b>{0}</b></html>
 StatementView.statementSummary={0} opérations. Total des dépenses : {1}. Total des recettes : {2}
 
