--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -665,6 +665,7 @@ FilePasswordDialog.openFile.tooltip=Entrez le mot de passe ici
 FilePasswordDialog.confirm=Confirmation
 
 #---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
 FilePasswordDialog.confirm=Confirmation du mot de passe
 FilePasswordDialog.confirm.tooltip=Retapez le mot de passe ici
 FilePasswordDialog.confirmIsNotOk=Le mot de passe et sa confirmation sont différents
