--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -670,6 +670,16 @@ FilePasswordDialog.openFile.badPassword.question=<html>A senha que você digitou 
 FilePasswordDialog.openFile.tooltip=Digite a senha aqui.
 
 #---------------------------------------------------------------------------------------------------------------------------------
-FilePasswordDialog.confirm=Confirmação da senha
-FilePasswordDialog.confirm.tooltip=Redigite sua senha aqui
-FilePasswordDialog.confirmIsNotOk=A senha ea confirmação são diferentes
+# Added or modified since last translation
+FilePasswordDialog.confirm=Password confirmation
+FilePasswordDialog.confirm.tooltip=Retype the password here
+FilePasswordDialog.confirmIsNotOk=Passwords do not match
+
+StatementView.title=Account statements
+StatementView.tooltip=Account statements view
+StatementView.accountMenu.tooltip=Select the account whose statements you want to view.
+StatementView.statementMenu.statementMenu.tooltip=Select the statement you want to display.
+StatementView.notChecked=Not checked
+StatementView.startBalance=Balance at the beginning of the period: {0}
+StatementView.endBalance=Balance at the end of the period: {0}
+StatementView.statementSummary={0} transactions. Total expenses: {1}. Total receipts: {2}
