--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -531,7 +531,7 @@ CustomFilterPanel.statement.contains.toolTip=Selecione para manter transações co
 CustomFilterPanel.statement.equals=Igual a
 CustomFilterPanel.statement.equals.toolTip=Selecione para manter transações com declarações igual aos seguintes campos
 CustomFilterPanel.statement.regularExpression=Expressões regulares
-CustomFilterPanel.statement.regularExpression.toolTip=Seelecione para manter transações com declarações que é exatamente igual as seguintes expressões regulares
+CustomFilterPanel.statement.regularExpression.toolTip=Selecione para manter transações com declarações que é exatamente igual as seguintes expressões regulares
 CustomFilterPanel.statement.toolTip=Texto para comparar com declarações da transação
 
 CustomFilterPanel.clearAll=Limpa todos os filtros
@@ -671,15 +671,15 @@ FilePasswordDialog.openFile.tooltip=Digite a senha aqui.
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
-FilePasswordDialog.confirm=Password confirmation
-FilePasswordDialog.confirm.tooltip=Retype the password here
-FilePasswordDialog.confirmIsNotOk=Passwords do not match
+FilePasswordDialog.confirm=Confirmação da senha
+FilePasswordDialog.confirm.tooltip=Digite aqui a senha outra vez
+FilePasswordDialog.confirmIsNotOk=As senhas digitadas não são as mesmas
 
-StatementView.title=Account statements
-StatementView.tooltip=Account statements view
-StatementView.accountMenu.tooltip=Select the account whose statements you want to view.
-StatementView.statementMenu.statementMenu.tooltip=Select the statement you want to display.
-StatementView.notChecked=Not checked
-StatementView.startBalance=Balance at the beginning of the period: {0}
-StatementView.endBalance=Balance at the end of the period: {0}
-StatementView.statementSummary={0} transactions. Total expenses: {1}. Total receipts: {2}
+StatementView.title=Relatórios da Conta
+StatementView.tooltip=Vista dos relatórios da conta
+StatementView.accountMenu.tooltip=Selecione os relatórios da conta para serem vistos.
+StatementView.statementMenu.statementMenu.tooltip=Selecione os relatórios da conta que você quer mostrar.
+StatementView.notChecked=Não verificado
+StatementView.startBalance=Balanço no início do período: {0}
+StatementView.endBalance=Balanço no final do período: {0}
+StatementView.statementSummary={0} transações. Gastos Totais: {1}. Totais recebidos: {2}
