--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -675,10 +675,10 @@ FilePasswordDialog.confirm=Confirmação da senha
 FilePasswordDialog.confirm.tooltip=Digite aqui a senha outra vez
 FilePasswordDialog.confirmIsNotOk=As senhas digitadas não são as mesmas
 
-StatementView.title=Relatórios da Conta
-StatementView.tooltip=Vista dos relatórios da conta
-StatementView.accountMenu.tooltip=Selecione os relatórios da conta para serem vistos.
-StatementView.statementMenu.statementMenu.tooltip=Selecione os relatórios da conta que você quer mostrar.
+StatementView.title=Extratos da Conta
+StatementView.tooltip=Veja os extratos da conta
+StatementView.accountMenu.tooltip=Selecione os extratos da conta para serem vistos.
+StatementView.statementMenu.statementMenu.tooltip=Selecione os extratos da conta que você quer mostrar.
 StatementView.notChecked=Não verificado
 StatementView.startBalance=Balanço no início do período: {0}
 StatementView.endBalance=Balanço no final do período: {0}
